Update Decryptor to use supported Base64 decoder